apps/infra/gateway-api/chart/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: gateway-api
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              routing.hoangvu75.space/expose: "true"
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              routing.hoangvu75.space/expose: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls
            kind: Secret
    - name: tcp
      port: 9000
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              routing.hoangvu75.space/expose: "true"
    - name: udp
      port: 9001
      protocol: UDP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              routing.hoangvu75.space/expose: "true"
