apps/infra/gateway-api/chart/httproute-traefik-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: gateway-api
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway-api
  hostnames:
    - "traefik.hoangvu75.space"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Port
                value: "443"
      backendRefs:
        - name: traefik
          port: 8080
